--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^5.0.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
     "hammerjs": "^2.0.8",
