--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
         "protractor.conf.js": true,
         "karma.conf.js": true,
         ".editorconfig": true,
-        "*.md": true
-    },
+        "*.md": true,
+        "*.spec.ts":true    },
     "search.exclude": {
         "node_modules/": true,
         "e2e/": true,
@@ -17,5 +17,6 @@
         ".editorconfig": true,
         "*.md": true
     },
-    "hg.enabled": false
+    "hg.enabled": false,
+    "git.ignoreLimitWarning": true
 }
