--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "mongoose": "^4.11.7",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
